Closed
Bug 243199
Opened 22 years ago
Closed 22 years ago
Messages with =00 truncated
Categories
(MailNews Core :: MIME, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: michal, Assigned: timeless)
References
Details
Attachments
(2 files, 1 obsolete file)
|
313 bytes,
message/rfc822
|
Details | |
|
4.41 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040114
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040114
When message contains NULL byte (=00 in quoted-printable), it gets truncated on
this byte.
Reproducible: Always
Steps to Reproduce:
1. Read message containing NULL byte.
Actual Results:
Message is truncated.
Expected Results:
See whole message.
Comment 1•22 years ago
|
||
Please save a sample email exhibiting this problem as a .EML file and attach it
to this bug (using MIME type message/rfc822).
| Reporter | ||
Comment 2•22 years ago
|
||
Here it comes. Removed some part of headers from original one.
Attachment #148206 -
Flags: superreview?(bienvenu)
Attachment #148206 -
Flags: review?(bienvenu)
Comment 4•22 years ago
|
||
Well, if timeless is going to patch this, it had better be confirmed! :)
Reproduced with
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a) Gecko/20040422
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•22 years ago
|
||
Comment on attachment 148206 [details] [diff] [review]
handle null the same way OE6 handles it
elsewhere in mail, we replace null with a space - any reason not to do that
here?
OE6 doesn't use a space. That's all I know. I don't care at all.
I think I agree w/ OE, a null byte is not like a space character. If you're
going to pick something, use a zwjs or whatever.
Assignee: sspitzer → timeless
Comment 7•22 years ago
|
||
we've picked space every where else - let's just be consistent. The reason we
pick something is so that sizes won't change...
i'm not sure what you mean by space
/* We got =xy where "x" was hex and "y" was not, so
treat that as a literal "=", x, and y. (But, if
this bogus token happened to occur over a buffer
boundary, we can't do this, since we don't have
space for it. Oh well. Screw it.) */
we clearly aren't very worried about certain kinds of spacing... (or efficiency
for that matter).
Attachment #148206 -
Attachment is obsolete: true
Attachment #148398 -
Flags: superreview?(bienvenu)
Attachment #148398 -
Flags: review?(bienvenu)
Updated•22 years ago
|
Attachment #148398 -
Flags: superreview?(bienvenu)
Attachment #148398 -
Flags: superreview+
Attachment #148398 -
Flags: review?(bienvenu)
Attachment #148398 -
Flags: review+
Attachment #148206 -
Flags: superreview?(bienvenu)
Attachment #148206 -
Flags: review?(bienvenu)
mozilla/mailnews/mime/src/mimeenc.cpp 1.20
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Comment 10•20 years ago
|
||
*** Bug 291749 has been marked as a duplicate of this bug. ***
Comment 11•20 years ago
|
||
Patch for this bug has perhaps produced issue of Bug 317009.
Comment 12•20 years ago
|
||
Bug 308121 also has some information about this regression and its impact on PDF attachments.
Blocks: 308121
Updated•18 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•