Bug 243199 Messages with =00 truncated r=bienvenu sr=bienvenu